# handheld-tracker-radio

./: .cproject  .gitignore  .mxproject  .project  README.md  STM32L476RGTX_FLASH.ld  STM32L476RGTX_RAM.ld  stm32l476rg-radio Debug.launch  stm32l476rg-radio-lvdl Debug.launch  stm32l476rg-radio-lvdl.ioc  stm32l476rg-radio-lvdl.launch
App/: app.h  app_main.c  app_ui.c  lv_conf.h
App/audio/: audio.c  audio.h
App/gps/: gps.c  gps.h  gps_hal.c  gps_hal.h
App/logging/: logging.c  logging.h
App/lvgl/src/: lv_conf_internal.h
App/sd/: sdmmc.c  sdmmc.h  sdmmc_bmp.c  sdmmc_bmp.h
App/tft/: tft_hal.c  tft_hal.h  tft_st7789.c  tft_st7789.h  tft_st7789_text.c  tft_st7789_text.h
App/ui/: ui_buttons.c  ui_buttons.h  ui_events.c  ui_menu.c  ui_menu.h
App/ui_generated/: ui.c  ui.h
App/ui_generated/images/: ui_img_background_resized_png.c  ui_img_mail_transparent_resized_png.c  (+3 more)
Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Debug/: makefile  objects.list  sources.mk  stm32l476rg-radio.list  stm32l476rg-radio.map
Debug/App/: app_gnss.d  app_main.cyclo  app_main.d  app_main.su  app_ui.cyclo  app_ui.d  app_ui.su  subdir.mk
SquareLine_Solution/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
SquareLine_Solution/exported_files/: CMakeLists.txt  filelist.txt  ui.c  ui.h
SquareLine_Solution/exported_files/images/: ui_img_battery_full_transparent_png.c  ui_img_folder_transparent_resized_outlined_png.c
SquareLine_Solution/exported_files/screens/: ui_MainScreen.c
(+1011 files in other folders)
